# deeptax

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
deeptax/: config.py
deeptax/dataset/: make_dataset.py
deeptax/features/: build_features.py
deeptax/models/: deep_api.py  train_model_1D.py
deeptax/tests/: test_unit_model.py
deeptax/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-deeptax_start.ipynb
