# -*- coding: utf-8 -*-
[metadata]
name = deeptax
summary = Deep learning taxonomic classification
description-file =
    README.md
author = Carlos Garcia Perez
author-email = carlos.garcia@helmholtz-muenchen.de
version = 1.0.0
license = MIT
home-page = https://github.com/charlos1204/deeptax
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    deeptax

[entry_points]

deepaas.v2.model = 
    deeptax = deeptax.models.deep_api

